Added Kmin and Kmax for icluster+ simulation order selection, and edited paper

--- a/Sweave/NBEM_Sweave.Rnw
+++ b/Sweave/NBEM_Sweave.Rnw
@@ -236,7 +236,7 @@ Accepted March} 2008.}
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-Clustering is a form of unsupervised learning that aims to uncover latent groups within data based on similarity across a set of features. A common application of this in biomedical research is in deriving novel cancer subtypes from patient gene expression data, given a set of informative genes. However, it is typically unknown a priori what genes may be informative in discriminating between clusters, and what the optimal number of clusters is. Few methods exist for unsupervised clustering of RNA-seq data that can simultaneously adjust for between-sample normalization factors, account for effects of potential confounding variables, and cluster patients while selecting cluster-discriminatory genes. To address this issue, we propose a model-based clustering algorithm that utilizes a multivariate finite mixture of regression (FMR) model with a group truncated lasso penalty. The maximization is done by coordinate-wise descent using the IRLS algorithm, allowing us to include normalization factors and predictors into our modeling framework. Given the fitted model, our framework allows for subtype prediction in new patients via posterior probabilities of cluster membership. Based on simulations and real data, we show the utility of our method relative to competing approaches.
+Clustering is a form of unsupervised learning that aims to uncover latent groups within data based on similarity across a set of features. A common application of this in biomedical research is in deriving novel cancer subtypes from patient gene expression data, given a set of informative genes. However, it is typically unknown a priori what genes may be informative in discriminating between clusters, and what the optimal number of clusters is. Few methods exist for unsupervised clustering of RNA-seq data that can simultaneously adjust for between-sample normalization factors, account for effects of potential confounding variables, and cluster patients while selecting cluster-discriminatory genes. To address this issue, we propose a model-based clustering algorithm that utilizes a finite mixture of regression (FMR) model with a hybrid L2 and SCAD penalty. The maximization is done by coordinate-wise descent using the IRLS algorithm, allowing us to include normalization factors, and potentially adjust for confounders in our modeling framework. Given the fitted model, our framework allows for subtype prediction in new patients via posterior probabilities of cluster membership. Based on simulations and real data, we show the utility of our method relative to competing approaches.
 \end{abstract}
 
 \begin{keywords}
@@ -262,17 +262,21 @@ Sys.setenv(TEXINPUTS=getwd(),
 RNA-seq is a recent platform for gene expression data based upon high-throughput sequencing. It has been shown to overcome some of the biases and limitations that are inherent in working with microarray \citep{Zhao2014}, and gives less background noise and provides a greater dynamic range for detection \citep{Hrdlickova2016}. Furthermore, there have been studies to show a strong correlation of results based on RNA-seq and microarray data, suggesting the reproducibility of the utilities of microarray analyses in RNA-seq \citep{Chen2017}.
 
 %CLUSTERING METHODS MICROARRAY%
-One such analysis of key interest in cancer genomics is that of clustering subjects based on subject-specific gene expression profiles, which can provide valuable insight into possible relatedness of cancer samples by grouping similarly expressed samples together. Subtype discovery has become a field of significant interest because studies have shown that the subtype of a patient's tumor not only affects the prognosis of the disease (Blows et al., 2010), but also the effectiveness of commonly-used treatments like chemotherapy \citep{Carey2011,Mao2017}. Clustering similar patients based on their gene expression profiles can help identify subjects' subtypes, and thus potentially lead to a much more efficient and effective targeted therapy regime. While there are numerous methods that have been developed to cluster microarray gene expression data \citep{Xie2007,Monti2003,Kluger2003,Cho2008}, few are able to cluster RNA-seq. Due to the discrete nature of the data, the standard Gaussian model cannot be assumed of the underlying distribution, as is done by methods like mclust \citep{Yeung2001}. Thus, some of the current methods opt to approximate the data with the normal distribution using some type of transformation \citep{Zwiener2014}. These transformations typically make the data 'more normal' to utilize existing methods for microarray, but there is not one transformation that is superior \citep{Noel-MacDonnell2018}. Thus, analyses using transformed count data would likely be dependent on the type of transformation used, which raises the question of reproducibility when working with them. Also, methods that have been developed for clustering with raw RNA-seq data have been designed specifically to cluster genes rather than samples \citep{Si2013}.
+One area of key interest in cancer genomics is in clustering samples based on subject-specific gene expression profiles. This can provide valuable insight into possible relatedness of cancer samples by grouping similarly expressed samples together. Based on this relatedness, one may be able to make inferences on samples' subtypes of cancer. Subtype discovery has become a field of significant interest because studies have shown that the subtype of a patient's tumor not only affects the prognosis of the disease (Blows et al., 2010), but also the effectiveness of commonly-used treatments like chemotherapy \citep{Carey2011,Mao2017}. Being able to identify the subtype of cancer samples based on gene expression may potentially unlock the door to targeted therapy regimes, in which employed treatments can be more specific to the biology of the particular subtype, and thus more efficient and effective.
+
+While there are numerous methods that have been developed to cluster microarray gene expression data \citep{Xie2007,Monti2003,Kluger2003,Cho2008}, few are able to cluster RNA-seq gene expression. Due to the discrete nature of RNA-seq, the standard Gaussian model cannot be assumed of the underlying distribution, as can be done on microarray by methods like mclust \citep{Yeung2001}. Some current methods get around this by approximating RNA-seq with the normal distribution using some type of transformation \citep{Zwiener2014}. These transformations typically make the data 'more normal' to utilize existing methods for microarray, but there is not one transformation that is superior \citep{Noel-MacDonnell2018}. Thus, analyses using transformed count data would be dependent on the type of transformation used, which raises the question of reproducibility. Also, the few methods that have been developed for clustering raw RNA-seq data have been designed specifically to cluster genes rather than samples \citep{Si2013}.
 
 %POINTS TO ADDRESS IN RNASEQ (normalization,count data,variable selection/prefiltering)%
-Biases and artifacts inherent in RNA-seq data also need to be accounted for during clustering. This is typically done using one of an array of normalization steps \citep{Li2015}, although none have been shown to be uniformly superior. Also, the high dimensionality of genetic dataset necessitates a dimension reduction scheme that can pinpoint genes that may be most likely to be informative in clustering, as a majority of genes may be uninformative and vary due to noise. (\textbf{ADD SENTENCE ON IMPACT OF NOISE/UNINFORMATIVE GENES CITING PRIOR WORK}). Thus, many methods use some criterion to pre-filter genes that are nondiscriminatory in nature \citep{Ritter2015}. A widely-used method of pre-filtering is done by ranking and thresholding genes based on its median absolute deviation (MAD) \citep{Chung2008} (\textbf{Alternatives to discuss?}). Additionally, dealing with count data requires different distributional assumptions for model-based methods. The most naive model-based assumption with untransformed count data is the Poisson distribution, which is used alongside a penalized likelihood scheme by a very popular integrative method called iCluster+ \citep{Mo2013}. We believe, however, that such a model also has its limitations, as it does not account for extra-Poisson variation. There are also some non-model-based methods that have been shown to be efficacious with RNA-seq data, such as the average-linkage hierarchical clustering (HC) and K-medoids clustering (K-med) methods \citep{Jaskowiak2018}. HC works by iteratively fusing the two closest clusters together, starting with $n$ clusters and going down. The closeness is determined by a distance matrix and a linkage scheme. Typically, a 1-spearman or 1-pearson correlation is most commonly used, and Jaskowiak proposes that the average-linkage scheme provides the best results with RNA-seq. K-med is very similar in procedure to the widely-known K-means algorithm, but rather than assigning the means as the centroids, K-med assigns datapoints as centroids (medoids). K-med works similarly to K-means by minimizing the distance between cluster members and their corresponding centroid, but is more robust and can better handle count data. Although these do not have a mode of variable selection, they may be useful in clustering nonetheless after some pre-filtering scheme.
+Biases and artifacts inherent in RNA-seq data also need to be accounted for during clustering. This is typically done using one of an array of normalization steps \citep{Li2015}, although none have been shown to be uniformly superior. Also, the high dimensionality of a genetic dataset necessitates a dimension reduction scheme that can pinpoint genes that may be most likely to be informative in clustering, as a majority of genes may be uninformative and vary due to noise. Thus, many methods use some criterion to pre-filter genes that are nondiscriminatory in nature \citep{Ritter2015}. A widely-used method of pre-filtering is done by ranking and thresholding genes based on its median absolute deviation (MAD) \citep{Chung2008} (\textbf{Alternatives to discuss?}). Noise and other forms of technical variation also intermingles with biological variation, confounding the effects of biological differences. There have been many discussions regarding the irreproducibility of microarray analyses due to noise and batch effects \citep{Scherer2009}, and many attempts have been made to account for these technical variations in RNA-seq, especially in the single cell RNA-seq setting \citep{Brennecke2013,Ding2015}. Sequencing depth is another form of technical variation that describes the dependence of a gene's quantification on its length \citep{Tarazona2011}. This can alter expression profiles dramatically, causing significant findings to be confounded by its sequencing depth.
+
+Additionally, dealing with count data requires different distributional assumptions for model-based methods. The most naive model-based assumption with untransformed count data is the Poisson distribution, which is used alongside a penalized likelihood scheme by a very popular integrative method called iCluster+ \citep{Mo2013}. We believe, however, that such a model also has its limitations, as it does not account for extra-Poisson variation. There are also some non-model-based methods that have been shown to be efficacious with RNA-seq data, such as the average-linkage hierarchical clustering (HC) and K-medoids clustering (K-med) methods \citep{Jaskowiak2018}. HC works by iteratively fusing the two closest clusters together, starting with $n$ clusters and going down in number of clusters. The closeness is determined by a distance matrix and a linkage scheme. Typically, a 1-spearman or 1-pearson correlation is most commonly used, and Jaskowiak proposes that the average-linkage scheme provides the best results with RNA-seq. K-med is very similar in procedure to the widely-known K-means algorithm, but rather than assigning the means as the centroids, K-med assigns datapoints as centroids (medoids). K-med works similarly to K-means by minimizing the distance between cluster members and their corresponding centroid, but is more robust and can better handle count data. Although these do not have a mode of variable selection, they may be useful in clustering nonetheless after some pre-filtering scheme.
 
 %OUR APPROACH%
-In this paper, we introduce FSCseq (Feature Selection and Clustering of RNA-seq), which proposes a finite mixture Negative Binomial model (\textbf{NEED BETTER NAME FOR METHOD}), incorporating a combination of the L2 and the SCAD penalty \citep{Fan2001}. By applying this penalty on the difference in log means, we are able to shrink cluster parameters together, while selecting out genes whose difference in expression across clusters is sufficiently low. The adaptive nature of the SCAD penalty reduces the bias introduced by a classic L1 penalty, while maintaining the thresholding aspect of the lasso.
+In this paper, we introduce FSCseq (Feature Selection and Clustering of RNA-seq), in which we propose a finite mixture Negative Binomial model, incorporating a combination of the L2 and SCAD penalties \citep{Fan2001}. By applying this hybrid penalty on the difference in estimated log means, we are able to shrink the cluster parameter estimates closer together, while selecting out genes whose difference in expression across clusters is sufficiently low. The adaptive nature of the SCAD penalty does not introduce as much bias as a classic L1 penalty, while maintaining the thresholding aspect of the lasso. The model is set in a regression scheme to allow for offsetting by normalization factors to adjust for sequencing, and to potentially allow for adjustments for confounders. The estimation is done using an Expectation Maximization (EM) algorithm. The E step weights are passed into the maximization (M step) to allow for cluster-specific estimation, and these weights also provide a very intuitive interpretation as the posterior probabilities of samples being in any particular cluster.
 
 There are four primary steps to our method. First, we pre-filter out genes with low variability using the MAD criterion to remove likely uninformative genes. Second, we select the optimal number of clusters in the Order Selection step using the Bayesian Information Criterion (BIC). Third, we search over a grid of possible combinations of the penalty parameters, and select the optimal tuning parameters using the BIC. Fourth, we input the optimal order and parameters into a full run of our algorithm.
 
-\textbf{Not sure if we do this anymore (below)}
+\textbf{Not sure if we do this anymore (below): g vs cl, EM vs CEM}
 We also explore an alternative E step update to potentially overcome the limitation of the classic EM of converging to a local maximum. Also, we assess the degrees of freedom in the fitted dispersion parameters per gene. Our framework allows for a separate fitted dispersion per cluster, but a single parameter per gene may suffice and perhaps be more appropriate.
 
 %%%%%%%%%%%%%%%%%%%%%%
@@ -282,7 +286,7 @@ We also explore an alternative E step update to potentially overcome the limitat
 \section{Methods}
 \label{sec:meth}
 
-The main goal of our method is two-fold: 1. to determine discriminatory genes based on differential expression of RNA-seq data, and 2. to cluster subjects based on similar expression profiles of genes. Also, we believe that our method is novel in that it may be used to derive posterior probabilities of a sample's subtype based on the model that is fit on the dataset, which may be especially useful in prediction. We utilize an EM algorithm to maximize our likelihood model.
+The main goal of our method is two-fold: 1. to determine discriminatory genes based on differential expression of RNA-seq data, and 2. to cluster subjects based on similar expression profiles of genes. We believe that our method is novel in that it provides a scheme to not only allow for correction for sources of technical variation like sequencing depth, but also to derive posterior probabilities of a sample's subtype based on the model that is fit on the dataset, which may be especially useful in prediction. We utilize an EM algorithm to maximize our likelihood model.
 
 %%% 2.1 Obj fx %%%
 \subsection{Likelihood Model}
@@ -302,16 +306,16 @@ log_2(\mu_{ijk}) = & \beta_{jk} + s_i \\
 V(y_{jk}) = & \mu_{jk} + \phi_j\mu_{jk}^2
 \end{align}
 
-where $\beta_{jk}$ represents the cluster log base 2 mean (henceforth called "cluster log means") for gene j and cluster k, and $s_i$ is the log of the subject-specific normalization factors calculated by DESeq2 \citep{Love2014}. We pass these normalization factors here as offsets into our regression model to correct for sequencing depth. Note that the equation calls for one common dispersion parameter per gene. The analog that we will assess is the use of separate cluster-specific dispersions, which replaces $\phi_j$ with $\phi_{jk}$ above. It is not known which scheme for these dispersions is more appropriate. Many prominent methods with RNA-seq use gene-specific dispersion parameters to account for extra-Poisson variation within each gene. However, it can be argued that in cases where the differences in dispersion between clusters is very large, estimating additional cluster-specific dispersion parameters may be required to better fit the model. But, it is also possible that this may lead to overfitting and skew the clustering results. In this paper, we find that one common dispersion per gene tends to be more accurate in terms of performance, but we will include the option to use separate cluster-specific dispersions as well.
+where $\beta_{jk}$ represents the cluster log base 2 (log2) mean (henceforth called "cluster log means") for gene j and cluster k, and $s_i$ is the log2 of the subject-specific normalization factors calculated by DESeq2 \citep{Love2014}. We pass these normalization factors here as offsets into our regression model to correct for sequencing depth. Note that the equation calls for one common dispersion parameter per gene. The analog that we will assess is the use of separate cluster-specific dispersions, which replaces $\phi_j$ with $\phi_{jk}$ above. It is not known which scheme is more appropriate for dispersions in real data. Many prominent methods of analyzing gene expression like DESeq2 use gene-specific dispersion parameters to account for extra-Poisson variation. However, it can be argued that in cases where the differences in dispersion between clusters is very large, estimating additional cluster-specific dispersion parameters may be required to better fit the model. However, this may lead to overfitting and skew the clustering results. In this paper, we find that one common dispersion per gene tends to be more accurate in terms of performance, but we will include the option to use distinct cluster-specific dispersions per gene as well.
 
 % 2.1.1 Penalty
 \subsubsection{Penalty}
-The penalty we incorporate is a modified version of the grouped truncated lasso penalty, which uses a hybrid of the lasso (L1) and ridge (L2) penalties \citep{Pan2013}. We replace the lasso with the Smoothly Clipped Absolute Deviation (SCAD) penalty, which is shown to introduce less bias than the classic L1 penalty while still being able to threshold coefficients to zero. We incorporate both penalties with an additional parameter to balance between the two penalty terms, like in the elastic net penalty \citep{Zou2005}. In this context, rather than penalizing coefficients ($\beta$) to zero like in a typical regression setting, we penalize the difference between log cluster means (denoted by $\theta$) to zero.
+The penalty we incorporate is a modified version of the grouped truncated lasso penalty, which uses a hybrid of the lasso (L1) and ridge (L2) penalties \citep{Pan2013}. Instead of the lasso, we utilize the Smoothly Clipped Absolute Deviation (SCAD) penalty, which is shown to introduce less bias than the classic L1 penalty, while still being able to threshold coefficients to zero. We incorporate this hybrid penalty by adding an additional parameter to balance between the two penalty terms, much like $\alpha$ in the elastic net penalty \citep{Zou2005}. In this context, rather than penalizing coefficients ($\beta$) to zero like in a typical regression setting, we penalize the differences between log2 cluster means (denoted by $\theta$) to zero.
 \begin{equation}
 p_{\lambda}(\beta)=\frac{\lambda(1-\alpha)}{2}\sum_{k<l} \norm{\beta_k-\beta_l-\theta_{kl}}_2^2 + \lambda\alpha \sum_{k<l}SCAD(\norm{\theta_{kl}}_2)
 \end{equation}
 
-where $\theta_{kl}=\beta_k-\beta_l$ is a reparametrization to store the difference between estimated cluster log means in the previous iteration, and $SCAD(\theta)=$ \textbf{Insert form of SCAD penalty here}. In this penalization scheme, $\lambda$ controls the amount of penalization introduced, and $\alpha$ parameter balances between the L2 and SCAD penalties. Note that under this penalty scheme, the difference in log means can never be set exactly to zero. However, the $\theta_{kl}$ parameter would be thresholded to zero when the log mean of cluster $k$ and $l$ are sufficiently close, which would indicate that the respective gene is nondiscriminatory across these two clusters.
+where $\theta_{kl}=\beta_k-\beta_l$ is a reparametrization to store the difference between estimated cluster log means in the previous iteration, and $SCAD(\theta)=\$ \textbf{Insert form of SCAD penalty here}. In this penalization scheme, $\lambda$ controls the amount of penalization introduced, and $\alpha$ parameter balances between the L2 and SCAD penalties. Note that under this penalty scheme, the difference in log means can never be set exactly to zero. However, the $\theta_{kl}$ parameter would be thresholded to zero when the log mean of cluster $k$ and $l$ are sufficiently close, which would indicate that the respective gene is nondiscriminatory across these two clusters.
 
 %%% 2.2 Computation %%%
 \subsection{Computation}
@@ -438,30 +442,34 @@ table1_EM_hi=table1[c(17:32,49:64),1:15]
 table1_other_low=table1[c(1:16,33:48),c(1:6,16,18,20,10,17,19,21)]
 table1_other_hi=table1[c(17:32,49:64),c(1:6,16,18,20,10,17,19,21)]
 
+rws <- rep(c(1:4),times=4)+rep(c(4,12,20,28),each=4)-1
+col <- rep("\\rowcolor[gray]{0.95}", length(rws))
+
 tab1 = xtable(table1_EM_low,
               digits=2,
               table.placement="!h",
-              caption="Effects of high/low simulated log means ($\\beta = 3.75 and 6.50 $) with low and medium noise ($\\phi = 0.15 and 0.35$) in simulated datasets on performance. Each row is based on 24 simulated datasets. Order Accuracy (OA) is the proportion of datasets that correctly selected the true K (order), and prediction accuracy (PA) is the proportion of new simulated subjects that were correctly clustered. PA takes into account only runs that correctly selected order, and missing values denote no dataset correctly selected the true K.",
+              caption="Effects of high/low simulated log means ($\\beta = 3.75$ and $6.50 $) with low and medium noise ($\\phi = 0.15 and 0.35$) in simulated datasets on performance. Each row is based on 24 simulated datasets. Order Accuracy (OA) is the proportion of datasets that correctly selected the true K (order), and prediction accuracy (PA) is the proportion of new simulated subjects that were correctly clustered. PA takes into account only runs that correctly selected order, and missing values denote no dataset correctly selected the true K.",
               label = "tab:1",na.print="")      # K=3, n=50, g=1000
 print(tab1,include.rownames=F, sanitize.text.function=identity,
-              floating.environment = "sidewaystable")
-      #,add.to.row=list(pos=as.list(4),command="\\rowcolor[gray]{.9}"))
+              floating.environment = "sidewaystable",add.to.row=list(pos=as.list(rws),command=col))
 
 tab2 = xtable(table1_EM_hi,
               digits=2,
               table.placement="!h",
-              caption="Effects of high/low simulated log means ($\\beta = 3.75 and 6.50$) with high and very high noise ($\\phi = 0.50 and 1.00$) in simulated datasets on performance.",
+              caption="Effects of high/low simulated log means ($\\beta = 3.75 and 6.50$) with high and very high noise ($\\phi = 0.50$ and $1.00$) in simulated datasets on performance.",
               label = "tab:2",na.print="")      # K=3, n=50, g=1000
 print(tab2,include.rownames=F, sanitize.text.function=identity,
-              floating.environment = "sidewaystable")
+              floating.environment = "sidewaystable",add.to.row=list(pos=as.list(rws),command=col))
 
 @
 
-As the average expression of the genes ($\beta$) goes up, we see that clustering performance (ARI) and order selection accuracy both increase. This is because as the mean expression for a gene increases, the distance two clusters in that particular gene increases. since the log fold change creates a greater separation at higher expressions. For example, the distance between $\beta=3$ and $\beta=4$ is much smaller than the distance between $\beta=6$ and $\beta=7$, since $\mu=e^{\beta}$, and $e^4-e^3 < e^7-e^6$.
+As the average expression of the genes ($\beta$) goes up, we see that clustering performance (ARI) and order selection accuracy both increase. This is because as the baseline expression for a gene increases, the distance betweentwo clusters in that particular gene increases, since the log fold change creates a greater separation at higher expressions. For example, the distance between $\beta=3$ and $\beta=4$ is much smaller than the distance between $\beta=6$ and $\beta=7$, since $\mu=e^{\beta}$, and $e^4-e^3 < e^7-e^6$.
 
 Conversely, as noise ($\phi$) increases, we see a decrease in clustering and order selection accuracy. The noisier the dataset, the harder it will be to distinguish whether the observed differential expression has biological significance, or is simply due to randomness in  the data. 
 
-Another useful feature of our algorithm is the ability to perform simultaneous variable selection while clustering. This helps us uncover which genes are discriminatory across clusters. We note that the sensitivity, or the proportion of discriminatory genes that are determined correctly to be discriminatory, is very good when the noise is small, but gets worse as noise is increased. We found that the false positive rate (FPR), or the rate at which nondiscriminatory genes are falsely determined to be discriminatory, does not follow this trend, but remains relatively constant through varying noise. 
+Another useful feature of our algorithm is the ability to perform simultaneous variable selection while clustering. This helps us uncover which genes are discriminatory across clusters. We note that the sensitivity, or the proportion of discriminatory genes that are determined correctly to be discriminatory, is very good when the noise is small, but gets worse as noise is increased. We found that the false positive rate (FPR), or the rate at which nondiscriminatory genes are falsely determined to be discriminatory, does not follow this trend, but remains relatively constant through varying noise. We also observed that sensitivity and FPR are both significantly better when $K=4$ vs. when $K=2$. This is because for more simulated clusters, the log2 fold change is applied multiple times, making it easier for the algorithm to distinguish genes that are differentially expressed across these clusters.
+
+% It is important to note that in real applications, the differential expression may not be present between every two adjacent clusters. For example, for one particular gene, the LFC may be 1.5 between clusters 1 and 2, but 0 between clusters 2, 3, and 4.
 
 A common integrative clustering method that is able to handle count data is iCluster+. It assumes a Poisson distribution on the data, and uses a L1 penalized likelihood model to estimate the parameters, while using a sampling scheme from the posterior distribution of the latent variables to discover clustering labels. We compared our method to just the count data portion of iCluster+'s integrative method.
 
@@ -471,20 +479,20 @@ Also, Two other clustering methods that have been found to be very useful for cl
 tab3 = xtable(table1_other_low,
               digits=2,
               table.placement="!h",
-              caption="Effects of high/low simulated log means ($\\beta = 3.75 and 6.50$) with low and medium noise ($\\phi = 0.15 and 0.35$) in simulated datasets on performance, compared to competing methods average-linkage hierarchical clustering (HC) and K-medoids (KM).",
+              caption="Effects of high/low simulated log means ($\\beta = 3.75$ and $6.50$) with low and medium noise ($\\phi = 0.15$ and $0.35$) in simulated datasets on performance, compared to competing methods average-linkage hierarchical clustering (HC) and K-medoids (KM).",
               label = "tab:3",na.print="")      # K=3, n=50, g=1000
 
 print(tab3,include.rownames=F, sanitize.text.function=identity,
-              floating.environment = "sidewaystable")
+              floating.environment = "sidewaystable",add.to.row=list(pos=as.list(rws),command=col))
 
 tab4 = xtable(table1_other_hi,
               digits=2,
               table.placement="!h",
-              caption="Effects of high/low simulated log means ($\\beta = 3.75 and 6.50$) with high and very high noise ($\\phi = 0.50 and 1.00$) in simulated datasets on performance, compared to competing methods HC and KM.",
+              caption="Effects of high/low simulated log means ($\\beta = 3.75$ and $6.50$) with high and very high noise ($\\phi = 0.50$ and $1.00$) in simulated datasets on performance, compared to competing methods HC and KM.",
               label = "tab:4",na.print="")      # K=3, n=50, g=1000
 
 print(tab4,include.rownames=F, sanitize.text.function=identity,
-              floating.environment = "sidewaystable")
+              floating.environment = "sidewaystable",add.to.row=list(pos=as.list(rws),command=col))
 @
 
 Here, we introduce some variants of our method. For one, we have so far restricted the simulations to contain gene-specific dispersions. It is not currently known whether a scheme with one dispersion parameter across all clusters for each gene adequately portrays real data. It may sometimes be more appropriate to introduce cluster-specific dispersion parameters to better fit the data, yielding more accurate estimates. However, this may also result in overfitting the data, which would cause our model to get stuck at a local maxima. One potential drawback that may result is that the order may be underestimated, as the extra dispersion parameters may cause the algorithm to favor a smaller number of clusters in the data.
@@ -518,9 +526,12 @@ The prediction accuracy was calculated by first inputting the correct order in c
 
 \subsubsection{TCGA Breast Cancer Dataset}
 
-We performed our clustering analysis on The Cancer Genome Atlas (TCGA) breast cancer dataset. This dataset contained 1215 subjects and 19682 genes. Of these subjects, we narrowed down our analysis to subjects whose subtypes were previously determined and annotated by a study done by TCGA based on the PAM50 genes (Koboldt et al, 2012). We also dropped the normal-like subtype, which occurred in just 8 cases out of 521 subjects. Thus, we analyzed 513 samples with 4 different subtypes: 231 luminal A, 127 luminal B, 97 basal-like, and 58 HER2-enriched. Then, we filtered out genes with low count by excluding the genes with MAD scores below the 75th quantile from our analysis, yielding 4921 total genes.
+We performed our clustering analysis on The Cancer Genome Atlas (TCGA) breast cancer (BRCA) dataset. This dataset contained 1215 subjects and 21022 genes. Purity is known to be a very strong confounder for cancer genomic data. Thus, we narrowed down our analysis to only samples whose purity estimate was greater than 0.9. We were left with 132 samples with 5 different subtypes: 53 luminal A, 38 luminal B, 32 basal-like, 6 HER2-enriched, and 2 normal-like. Then, we filtered out genes with low count by excluding genes with MAD scores below the median MAD from our analysis, yielding 9062 total genes. We compared our clustering results with the clusters that have been previously determined and annotated (Koboldt et al, 2012). These annotated subtypes were results based on the well-known PAM50 genes.
 
-We compared our method to the count data method of iCluster+, as well as the average-linkage hierarchical clustering (HC) model and K-medoids (K-med) model. We used the same criterion (BIC) to search for the optimal order and tuning parameters. The order selection steps for the EM and for iCluster+ were compared to see if the annotated number of clusters can be recovered. The EM correctly recovered the annotated order of $K=4$, but iCluster+ continued to select the maximum number of clusters in the range ($K=7$). In \ref{tab:3}, we compared all the methods with the correct number of clusters input. First, we notice the drastically lower agreement (ARI) of the HC and K-med clusters compared to the EM. The results also show that the EM and iCluster+ yielded clusters with the same ARI values compared to the annotated clusters, although the EM yielded a slightly higher mean silhouette value. Mean silhouette value measures clustering accuracy by a combination of proximity within clusters, and distance away from other clusters \citep{Ge2017}. A recent study showed that higher average silhouette value is robust to small sample size, and can be very indicative of degree of cluster separation in RNA-seq data \citep{Zhao2018}. K-med works by minimizing the distance between each cluster point and the center of the cluster. This seems to most closely reflect how the silhouette value is computed, so K-med naturally yields the highest mean silhouette value ($0.136$). After K-med, EM yielded the highest mean silhouette value ($0.100$) Silhouette values were based on the 1-pearson correlation distance.
+We also compared our method to the count data method of iCluster+, as well as the average-linkage hierarchical clustering (HC) model and K-medoids (K-med) model. We used the same criterion (BIC) to search for the optimal order and tuning parameters. The order selection steps for the EM and for iCluster+ were compared to see if the annotated number of clusters can be recovered. The EM correctly recovered the annotated order of $K=4$
+
+% Not sure if should include silhouette
+Mean silhouette value measures clustering accuracy by a combination of proximity within clusters, and distance away from other clusters \citep{Ge2017}. A recent study showed that higher average silhouette value is robust to small sample size, and can be very indicative of degree of cluster separation in RNA-seq data \citep{Zhao2018}. K-med works by minimizing the distance between each cluster point and the center of the cluster. This seems to most closely reflect how the silhouette value is computed, so K-med naturally yields the highest mean silhouette value ($0.136$). After K-med, EM yielded the highest mean silhouette value ($0.100$) Silhouette values were based on the 1-pearson correlation distance.
 
 We also performed survival analysis with each respective clustering labels. Although the results seem to slightly favor the annotated clusters ($p=0.125$) over the EM ($p=0.200$), survival data was very limited in this study (only 79 out of 513 samples), so we were hesitant to draw any conclusions. One way we mitigate the problem of low sample size in our survival analysis is by using a permutation-based test to yield an empirical p-value, rather than the classic log-rank test \citep{Rappoport2018}. We then conducted the Fisher's Exact test on the overall survival (OS) of the patients. There were 62 OS events, and no missing data points in the 513 total samples.
 
